--- a/client-app/package.json
+++ b/client-app/package.json
@@ -18,6 +18,7 @@
     "antd": "^4.1.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "reactstrap": "^8.4.1",
     "ts-loader": "^6.2.2",
     "typescript": "^3.8.3",
     "webpack": "^4.42.1",
