--- a/client-app/tsconfig.json
+++ b/client-app/tsconfig.json
@@ -3,12 +3,24 @@
       "sourceMap": true,
       "module": "commonjs",
       "target": "es5",
-      "jsx": "react"
+      "jsx": "react",
+      "esModuleInterop": true,
+      "allowSyntheticDefaultImports": true,
+    "experimentalDecorators": true,
+    "preserveConstEnums": true,
+    "allowJs": true,
     },
     "include": [
-      "src"
+        "src"
     ],
+    "types": [
+        "node",
+        "webpack",
+        "react",
+        "react-dom",
+        "reactstrap"
+    ],
+    
     "compileOnSave": true,
-    "esModuleInterop": true,
     // "noImplicitAny": false
   }
