tables are rendering with data in UserDashboard, just need to clean up surrounding code

--- a/client-app/package.json
+++ b/client-app/package.json
@@ -19,10 +19,14 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "reactstrap": "^8.4.1",
+    "style-loader": "^1.2.1",
     "ts-loader": "^6.2.2",
     "typescript": "^3.8.3",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
+  },
+  "devDependencies": {
+    "css-loader": "^3.5.3"
   }
 }
