--- a/client-app/package.json
+++ b/client-app/package.json
@@ -13,6 +13,7 @@
   },
   "proxy": "https://localhost:5000/",
   "dependencies": {
+    "@material-ui/core": "^4.9.13",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
     "antd": "^4.1.4",
