--- a/server/package.json
+++ b/server/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "swear-jar",
   "version": "1.0.0",
@@ -28,5 +29,8 @@
     "nodemon": "^2.0.3",
     "path": "^0.12.7",
     "pg-promise": "^10.5.1"
+  },
+  "devDependencies": {
+    "eslint": "^7.1.0"
   }
 }
