--- a/client-app/package.json
+++ b/client-app/package.json
@@ -28,6 +28,7 @@
     "webpack-dev-server": "^3.10.3"
   },
   "devDependencies": {
-    "css-loader": "^3.5.3"
+    "css-loader": "^3.5.3",
+    "react-axe": "^3.4.1"
   }
 }
