--- a/client-app/package.json
+++ b/client-app/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@material-ui/core": "^4.9.13",
     "@types/react": "^16.9.34",
+    "@types/react-axe": "^3.1.0",
     "@types/react-dom": "^16.9.6",
     "antd": "^4.1.4",
     "react": "^16.13.1",
