--- a/client-app/package.json
+++ b/client-app/package.json
@@ -29,7 +29,11 @@
     "webpack-dev-server": "^3.10.3"
   },
   "devDependencies": {
+    "@auth0/auth0-spa-js": "^1.9.0",
+    "@types/react-router": "^5.1.7",
+    "@types/react-router-dom": "^5.1.5",
     "css-loader": "^3.5.3",
-    "react-axe": "^3.4.1"
+    "react-axe": "^3.4.1",
+    "react-router-dom": "^5.2.0"
   }
 }
