--- a/client-app/tsconfig.json
+++ b/client-app/tsconfig.json
@@ -8,11 +8,14 @@
       "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true,
     "preserveConstEnums": true,
-    "allowJs": true,
+    "allowJs": true
     },
     "include": [
         "src"
     ],
+    "exclude": [
+      "node_modules/auth0-js"
+  ],
     "types": [
         "node",
         "webpack",
