--- a/client-app/package.json
+++ b/client-app/package.json
@@ -18,6 +18,7 @@
     "@types/react-axe": "^3.1.0",
     "@types/react-dom": "^16.9.6",
     "antd": "^4.1.4",
+    "dotenv": "^8.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "reactstrap": "^8.4.1",
